--- a/best-air-fryers/index.html
+++ b/best-air-fryers/index.html
@@ -1,1 +1,430 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Best Air Fryers (2026) | KitchenGearLab</title>
+  <meta name="description" content="Best air fryers for real kitchens in 2026. A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/best-air-fryers/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/" />
+  <meta property="og:title" content="Best Air Fryers (2026) | KitchenGearLab" />
+  <meta property="og:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryers-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Best Air Fryers (2026) | KitchenGearLab" />
+  <meta name="twitter:description" content="A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/best-air-fryers-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight." />
+
+  <!-- Performance: hero preload (update filenames if different) -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Best Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/#webpage",
+        "url": "https://kitchengearlab.github.io/best-air-fryers/",
+        "name": "Best Air Fryers (2026)",
+        "description": "Best air fryers for real kitchens in 2026. A calm, test-driven shortlist with clear trade-offs: capacity, controls, cleanup, and consistency.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/best-air-fryers/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/best-air-fryers-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "mainEntityOfPage": "https://kitchengearlab.github.io/best-air-fryers/",
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/" aria-current="page">Best Air Fryers</a></li>
+            <li><a href="/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <!-- Breadcrumbs (visible) -->
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Best Air Fryers</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <p class="kicker">Comparison & decision</p>
+            <h1 id="hero-title">Best Air Fryers (2026)</h1>
+
+            <p class="lead">
+              A calm, test-driven shortlist for real kitchens. We focus on what actually changes your day-to-day:
+              results consistency, usable capacity, cleanup friction, and controls you won’t hate after week two.
+            </p>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="#top-picks">See top picks</a>
+              <a class="btn btn-secondary" href="#how-to-choose">How to choose</a>
+            </div>
+
+            <p class="micro-note">
+              Trust-first:
+              <a href="/about/">About</a> ·
+              <a href="/disclosure/">Disclosure</a> ·
+              <a href="/privacy/">Privacy</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-2400x1260.webp 2400w"
+                sizes="(max-width: 900px) 100vw, 40vw"
+              />
+              <img
+                src="https://kitchengearlab.github.io/assets/images/hero/best-air-fryers-hero-1600x840.webp"
+                width="1600"
+                height="840"
+                alt="Premium editorial kitchen scene featuring multiple air fryers arranged side-by-side in soft daylight."
+                loading="eager"
+                decoding="async"
+                fetchpriority="high"
+              />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="top-picks" aria-labelledby="picks-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="picks-title">Top picks</h2>
+          <p class="section-subtitle">Shortlist first. Details second. No hype in the middle.</p>
+        </div>
+
+        <div class="note">
+          <p class="small" style="margin:0;">
+            These picks are placeholders until you finalize your exact models. The structure is built for SEO and usability.
+            When you’re ready, tell me your 3–6 exact model names and I’ll fill the table + pros/cons precisely.
+          </p>
+        </div>
+
+        <div class="table-wrap" style="margin-top: var(--s-6);">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Pick</th>
+                <th>Best for</th>
+                <th class="muted">Why it wins</th>
+                <th class="muted">Trade-offs</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="best">
+                  <span class="badge">Top pick</span><br />
+                  Balanced daily driver
+                </td>
+                <td>Most kitchens</td>
+                <td class="muted">Stable results, easy workflow, realistic cleanup.</td>
+                <td class="muted">Not the biggest basket; not the cheapest.</td>
+              </tr>
+              <tr>
+                <td class="best">
+                  <span class="badge">Budget</span><br />
+                  Simple + affordable
+                </td>
+                <td>Value buyers</td>
+                <td class="muted">Good results for the money, straightforward controls.</td>
+                <td class="muted">Noisy or slower; coatings vary by model.</td>
+              </tr>
+              <tr>
+                <td class="best">
+                  <span class="badge">Large</span><br />
+                  Bigger batches
+                </td>
+                <td>Families</td>
+                <td class="muted">More usable capacity; fewer rounds.</td>
+                <td class="muted">Bigger footprint; storage reality matters.</td>
+              </tr>
+              <tr>
+                <td class="best">
+                  <span class="badge">Dual-zone</span><br />
+                  Two foods, one run
+                </td>
+                <td>Meal timing</td>
+                <td class="muted">Flexible scheduling; less juggling.</td>
+                <td class="muted">Often heavier; more parts to clean.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="pros-cons" aria-label="Quick pros and cons">
+          <section class="pros">
+            <h3>What “good” usually looks like</h3>
+            <ul>
+              <li>Controls you can use half-asleep.</li>
+              <li>Basket that cleans without a negotiation.</li>
+              <li>Consistent results at normal home loads.</li>
+              <li>Footprint that matches your counter reality.</li>
+            </ul>
+          </section>
+
+          <section class="cons">
+            <h3>Common disappointments to avoid</h3>
+            <ul>
+              <li>Overstated capacity (usable space is smaller).</li>
+              <li>Hot spots or weak airflow at real loads.</li>
+              <li>Coatings that hate metal utensils.</li>
+              <li>Cleaning friction (crevices, awkward inserts).</li>
+            </ul>
+          </section>
+        </div>
+
+        <div class="two-col">
+          <div class="col">
+            <h3>Want a brand-focused path?</h3>
+            <p class="muted">If you’re leaning Ninja, use the hub to understand model families and trade-offs.</p>
+            <ul class="link-list">
+              <li><a href="/ninja-air-fryers/">Ninja Air Fryers Hub</a></li>
+              <li><a href="/ninja-vs-philips/">Ninja vs Philips</a></li>
+              <li><a href="/ninja-vs-cosori/">Ninja vs Cosori</a></li>
+            </ul>
+          </div>
+
+          <div class="col">
+            <h3>Not sure what you need yet?</h3>
+            <p class="muted">Start with the fundamentals before shopping.</p>
+            <ul class="link-list">
+              <li><a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a></li>
+              <li><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></li>
+              <li><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section" id="how-to-choose" aria-labelledby="choose-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="choose-title">How to choose</h2>
+          <p class="section-subtitle">A short checklist that prevents buyer’s remorse.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">
+            Ignore marketing capacity first. Focus on the daily workflow: how you load food, shake/flip, and clean.
+            Most people regret friction, not features.
+          </p>
+
+          <ul>
+            <li><strong>Usable capacity:</strong> what fits in one layer without crowding.</li>
+            <li><strong>Controls:</strong> simple presets are fine, but manual control should be easy.</li>
+            <li><strong>Cleanup:</strong> fewer crevices, easy-to-remove inserts, coating that rinses clean.</li>
+            <li><strong>Results consistency:</strong> stability across real loads (not only “one portion”).</li>
+            <li><strong>Footprint:</strong> measure your counter and storage space, not your optimism.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              If you want the full deep-dive, use our guide:
+              <a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a>.
+            </p>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Informational only. Models and specs change; performance varies by usage, batch size, and food type.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="method" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How we evaluate</h2>
+          <p class="section-subtitle">Repeatable checks. Clear criteria. Trade-offs explained.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">
+            We don’t crown a universal “best”. We explain what changes the day-to-day experience so you can choose what fits your kitchen.
+          </p>
+
+          <ul>
+            <li><strong>Usability:</strong> controls, ergonomics, day-to-day friction.</li>
+            <li><strong>Performance:</strong> consistency under normal home use.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
+            <li><strong>Durability cues:</strong> realistic longevity signals (fit/finish, hinges, coatings).</li>
+            <li><strong>Transparency:</strong> no unverified claims.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              Affiliate disclosure is explicit and separate. See <a href="/disclosure/">Disclosure</a>.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
